--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,6 +12,14 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:applicationContext.xml</param-value>
+    </context-param>
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
   
  	<servlet>
 		<servlet-name>springDispatcherServlet</servlet-name>
@@ -19,7 +27,7 @@
 		<load-on-startup>1</load-on-startup>
  		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:springmvc.xml,classpath:applicationContext.xml</param-value>
+			<param-value>classpath:springmvc.xml</param-value>
 		</init-param> 
 	</servlet>
 
